# cob_driver

cob_driver/: package.xml
cob_light/: CMakeLists.txt  package.xml
cob_light/common/include/: breathColorMode.h  breathMode.h  distApproxMode.h  mode.h  modeExecutor.h  modeFactory.h
cob_light/common/src/: modeExecutor.cpp  modeFactory.cpp  serialIO.cpp
cob_light/ros/include/: colorOSim.h
cob_light/ros/scripts/: light_action_test.py  light_stop_test.py
cob_light/ros/src/: cob_light.cpp  colorO.cpp  colorOSim.cpp  light_node.cpp  ms35.cpp  stageprofi.cpp
cob_mimic/: CMakeLists.txt
cob_mimic/test/: multi_thread_vlc.cpp
cob_phidgets/: CMakeLists.txt
cob_phidgets/common/include/cob_phidgets/: phidget_motor.h
cob_phidgets/common/src/: phidget_motor.cpp
cob_phidgets/config/: phidget.yaml
cob_phidgets/launch/: phidgets.launch
cob_phidgets/msg/: Encoder.msg  Motor.msg  Velocity.msg
cob_phidgets/ros/include/cob_phidgets/: phidget_manager.h  phidget_motor_ros.h
cob_phidgets/ros/src/: phidget_manager.cpp  phidget_motor_ros.cpp  phidget_sensors_node.cpp
cob_phidgets/srv/: SetAcceleration.srv  SetBackEMFSensingState.srv  SetBraking.srv  SetEncoderPosition.srv
cob_sick_s300/ros/src/: cob_scan_filter.cpp
